# wc2026-superAgent

./: .env.example  .gitignore  .ruff.toml  README.md  modelo_xgboost.pkl  pyproject.toml  requirements.txt
.github/workflows/: agente_fifa.yml  ci.yml
src/: __init__.py  bankroll.py  data_extractor.py  ensemble.py  feature_engineer.py  main.py  models.py
tests/: __init__.py  conftest.py  test_bankroll.py  test_ensemble.py  test_extractor.py  test_models.py
